- Fix Expedition titles in multiple languages
- Update Singularity Engine icon
- Fix Refiner recipe times
- Moved items that were in incorrect categories
- Fixed language resetting to English when cancelling language selection

_Submitted to App Stores 2022-08-12_

For more details on this update please visit the "What is New" page in the Apps or on the website
