@@ -1,5 +1,17 @@
 [
   {
+    "guid": "22c7095f-4538-4041-af33-f6bef569219f",
+    "username": "Lajos Valent",
+    "type": "Paypal",
+    "date": "2022-08-06T17:42:00Z"
+  },
+  {
+    "guid": "8a3b22d4-4c0c-403e-92f4-23d1bfe27712",
+    "username": "Ronny Hamann",
+    "type": "Paypal",
+    "date": "2022-07-31T09:48:00Z"
+  },
+  {
     "guid": "a469424d-33f9-4c5d-aa3b-3e130c8ed4eb",
     "username": "Invisiblesells",
     "type": "Paypal",
@@ -1038,15 +1050,15 @@
     "date": "2019-08-25T10:00:00Z"
   },
   {
-    "guid": "c6f3a9f2-d724-4a14-823f-d4f775018dc0",
-    "username": "Torsten Urbas",
-    "type": "Paypal",
-    "date": "2019-08-24T09:59:00Z"
-  },
-  {
     "guid": "0428e316-522f-4716-8b42-65fb2eb50657",
     "username": "u/sircod",
     "type": "BraveRewards",
+    "date": "2019-08-24T09:59:00Z"
+  },
+  {
+    "guid": "c6f3a9f2-d724-4a14-823f-d4f775018dc0",
+    "username": "Torsten Urbas",
+    "type": "Paypal",
     "date": "2019-08-24T09:59:00Z"
   },
   {
