@@ -184,5 +184,23 @@
     "imageUrl": "https://cdn.assistantapps.com/patreon/F5340B555E6426381124C31489E7A1E5.png",
     "thumbnailUrl": "https://cdn.assistantapps.com/patreon/F5340B555E6426381124C31489E7A1E5.png",
     "url": "https://assistantapps.com"
+  },
+  {
+    "name": "Svengali Zurbäch",
+    "imageUrl": "https://ui-avatars.com/api/?size=128&name=Svengali",
+    "thumbnailUrl": "https://ui-avatars.com/api/?size=128&name=Svengali",
+    "url": "https://assistantapps.com"
+  },
+  {
+    "name": "Anderson Pereira",
+    "imageUrl": "https://ui-avatars.com/api/?size=128&name=Anderson",
+    "thumbnailUrl": "https://ui-avatars.com/api/?size=128&name=Anderson",
+    "url": "https://assistantapps.com"
+  },
+  {
+    "name": "Redc ",
+    "imageUrl": "https://ui-avatars.com/api/?size=128&name=Redc ",
+    "thumbnailUrl": "https://ui-avatars.com/api/?size=128&name=Redc ",
+    "url": "https://assistantapps.com"
   }
 ]
