@@ -432,7 +432,7 @@
   "shareIncludeName": "Incluir nome",
   "copyToClipboard": "Copiar para a área de transferência",
   "shareOpenLink": "Abrir link",
-  "starshipScrap": "Starship scrap",
+  "starshipScrap": "Sucata de Nave",
   "starshipScrapAny": "Qualquer",
   "xClass": "Classe",
   "viewPostOnline": "Olhar post online",
@@ -440,18 +440,18 @@
   "speculation": "Especulação ",
   "daysSinceLastUpdate": "Dias desde a ultima atualização",
   "daysUntilAnniversary": "{0} Dias até o proximo aniversário ",
-  "daysPerUpdate": "Average days per update: {0}",
+  "daysPerUpdate": "Média de dias entre atualizações ",
   "updateCouldBeOnDateBasedOnAverageDays": "Proximo update talvez ocorrera {0} baseado no tempo do ultimo update",
   "basedOnTheLastXUpdates": "Baseado nos ultimos {0} updates",
   "updateName": "Nome da atualização ",
   "updateDateReleased": "Data de lançamento",
   "updateDaysSincePreviousUpdate": "Dias desde a ultima atualização",
   "shareOpenMenu": "Abrir menu de compartilhamento ",
-  "syncDocumentationNotice": "This page cannot synchronise with your game save. Click here to find out why",
-  "syncSelectLocationToSaveFile": "Please select a location to save the file",
-  "addedInUpdate": "Added in update",
-  "suggestALink": "Suggest a Link",
-  "creatureHarvestKill": "Kill",
-  "creatureHarvestHarvest": "Harvest",
-  "hashCode": "2D12614C221FE354C840EAF6004CB784"
+  "syncDocumentationNotice": "Essa página não conseguiu se conectar com seu jogo salvo. Clique aqui e descubra",
+  "syncSelectLocationToSaveFile": "Por favor selecione onde está o arquivo de salvamento ",
+  "addedInUpdate": "Adicionado em atualização ",
+  "suggestALink": "Sugira um link",
+  "creatureHarvestKill": "Mate",
+  "creatureHarvestHarvest": "Colheita",
+  "hashCode": "357D1A90CC9AF5B5315852A3EB040E79"
 }
