@@ -41,7 +41,7 @@
   "noticeContent": "Feliz Dia dos namorados! Espero que seu dia seja cheio de amor em todos os cantos de todas as galáxias! Agradecimentos especiais ao NMS_GalacticCorporate por criar cartões de Dia dos Namorados relacionados ao NMS!",
   "noticeAccept": "Aceitar",
   "buyMeACoffee": "Me compre um Café",
-  "patreon": "Patreon",
+  "patreon": "Ola",
   "paypal": "PayPal",
   "kofi": "Ko-fi",
   "searchItems": "Procurar Item",
@@ -453,5 +453,5 @@
   "suggestALink": "Suggest a Link",
   "creatureHarvestKill": "Kill",
   "creatureHarvestHarvest": "Harvest",
-  "hashCode": "5FB377E6D05907173D4B838141FBBBA9"
+  "hashCode": "3EFCE13FB46A3898077AAE65208228BA"
 }
