@@ -27,7 +27,7 @@
   "creatureHarvestJson": "en/CreatureHarvest.lang",
   "seasonalExpeditionJson": "en/SeasonalExpedition.lang",
   "journeyMilestoneJson": "en/Milestones.lang",
-  "title": "All Recipes",
+  "title": "Assistant for No Man's Sky",
   "loading": "Loading",
   "about": "About",
   "aboutContent": "Why did I bother to build this? \r\nOne day I was playing No Man's Sky and wanted to plan out what farmable resources I should have at a new base, I thought that it would be easier to download an app from the Play/App Store than pull up the wiki on my second monitor. I found an app and was hit with a pay wall when I tried to look at the recipes for crafted materials, annoyed I decided to make an app that would be free for everyone to use. It was also a great excuse to play a bit with Flutter app development. \r\n\r\nP.S. I also have a blog, Inside my Mind - by Kurt Lourens. I havent been making use of it as much as I could have, but I have some articles😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
@@ -453,5 +453,5 @@
   "suggestALink": "Suggest a Link",
   "creatureHarvestKill": "Kill",
   "creatureHarvestHarvest": "Harvest",
-  "hashCode": "8A79AA4EA0DD8B39968B3202FFC48583"
+  "hashCode": "D17490F88DBB3817168958DB06D13D91"
 }
