@@ -157,7 +157,7 @@
   "traditionalChinese": "繁体中文",
   "communityMission": "社区研究",
   "communityMissionContent": "太空异象正在收集来自多个平行空间的旅行者的研究数据。 随着更多研究数据的上传，水银合成伙伴将解锁更多的收藏品。",
-  "patched": "被修复",
+  "patched": "修复于",
   "general": "常规",
   "useMaterialTheme": "使用主题材质",
   "showItemBackgroundColours": "显示物品背景颜色",
@@ -186,7 +186,7 @@
   "noticeReject": "不再提示",
   "valentines": "情人节",
   "viewItemsAdded": "查看已添加的物品",
-  "newItemsAdded": "新物品已添加",
+  "newItemsAdded": "更新添加物",
   "proceduralProducts": "程序产品",
   "orderBy": "排序",
   "name": "名称",
@@ -428,8 +428,8 @@
   "twitchDrop": "Twitch掉宝",
   "quicksilverCompanion": "水银合成同伴",
   "mergeInventoryQuantities": "合并同种物品",
-  "shareForceLanguage": "强制使用同种语言",
-  "shareIncludeName": "包括物品名",
+  "shareForceLanguage": "应用简中",
+  "shareIncludeName": "包含物品名",
   "copyToClipboard": "拷贝到剪贴板",
   "shareOpenLink": "打开连接",
   "starshipScrap": "拆解飞船",
@@ -439,19 +439,19 @@
   "noItemsRecorded": "未添加任何物品",
   "speculation": "猜测",
   "daysSinceLastUpdate": "距离上次更新过去了 {0} 天",
-  "daysUntilAnniversary": "距离游戏周年庆还剩 {0} 天",
+  "daysUntilAnniversary": "距离游戏发布周年还剩 {0} 天",
   "daysPerUpdate": "更新间隔平均天数: {0}",
-  "updateCouldBeOnDateBasedOnAverageDays": "基于游戏上次{1}更新和平均更新等待时长，下次更新有可能会在 {0}",
-  "basedOnTheLastXUpdates": "基于游戏的最近 {0} 次更新",
+  "updateCouldBeOnDateBasedOnAverageDays": "基于游戏 {1} 更新和平均更新等待时长，下次更新有可能会在 {0}",
+  "basedOnTheLastXUpdates": "最近 {0} 次更新",
   "updateName": "更新名",
   "updateDateReleased": "发布日期",
   "updateDaysSincePreviousUpdate": "距离前一次更新的日数",
   "shareOpenMenu": "打开共享菜单",
-  "syncDocumentationNotice": "该页面不能与你的游戏存档同步，单击此处了解更多",
+  "syncDocumentationNotice": "该界面不能与你的游戏存档同步，单击此处了解更多",
   "syncSelectLocationToSaveFile": "请选择游戏存档所在的目录",
   "addedInUpdate": "添加于",
   "suggestALink": "提供一条实用链接",
   "creatureHarvestKill": "击杀",
   "creatureHarvestHarvest": "收集",
-  "hashCode": "2348B366A76FEB39CE07B656EE0BDE32"
+  "hashCode": "F530DC8C9A2C496DC203C552EB3E31AD"
 }
