@@ -30,17 +30,17 @@
   "title": "所有材料",
   "loading": "載入中",
   "about": "關於",
-  "aboutContent": "Why did I bother to build this? \r\nOne day I was playing No Man's Sky and wanted to plan out what farmable resources I should have at a new base, I thought that it would be easier to download an app from the Play/App Store than pull up the wiki on my second monitor. I found an app and was hit with a pay wall when I tried to look at the recipes for crafted materials, annoyed I decided to make an app that would be free for everyone to use. It was also a great excuse to play a bit with Flutter app development. \r\n\r\nP.S. I also have a blog, Inside my Mind - by Kurt Lourens. I havent been making use of it as much as I could have, but I have some articles😋.\r\n\r\nThis App is not affiliated with Hello Games or No Man's Sky, its subsidiaries, or its parent companies, whose names, logos and products are displayed in this App.",
+  "aboutContent": "我為什麼要費心開發這個應用程式？有一天我在遊玩《無人深空》，想計劃一下我應該在新基地擁有哪些可耕種資源，我認為從 Play/App Store 下載應用程式比在我的第二台顯示器上打開 wiki 更容易。於是我找到了一個應用程式，但當我試圖查看製作材料的配方時卻遇到了付費牆，我很生氣，並決定製作一個所有人都可以免費使用的應用程式。這也是探索 Flutter 應用程式開發的一個很好的理由。\n\n附言：我也有一個名為 Inside my Mind - by Kurt Lourens 的博客。我沒有盡可能多地使用它，但我撰寫過一些文章 😋。\n\n此應用程式不隸屬於 Hello Games 或 No Man's Sky 及其子公司或母公司，其名稱、徽標和產品均顯示在此應用程式中。",
   "language": "語言幫助",
-  "languageContent": "I need some help to translate this App into multiple Languages. I only know English and Afrikaans and a tiny amount of French. \r\nIf you are willing to help please let me know. \r\nI will be putting the names of those who contributed and want recognition on the website 😁",
+  "languageContent": "我需要一些幫助來將此應用程式翻譯成多種語言。我只會英語，南非荷蘭語以及少量法語。如果您願意提供幫助，請告訴我。我會把那些做出貢獻並希望得到認可的人的名字放在網站上 😁",
   "email": "提供協助",
-  "github": "Go To Github",
-  "kurtsBlog": "Kurt's Blog",
+  "github": "前往 Github",
+  "kurtsBlog": "Kurt 的博客",
   "donation": "捐助",
-  "donationDescrip": "All features of the app are available to you, there are no PayWalls. However there are costs involved with making Apps and hosting websites, so donations help me out. If you like this App please give me a review in the Play/App Store and donate if you can",
-  "noticeContent": "Happy Valentine's Day! Hope your day is full of love from every corner of all the Galaxies! Special thanks to the @ItzHooverYT for creating NMS related Valentine's Day cards!",
-  "noticeAccept": "Accept",
-  "buyMeACoffee": "Buy me a Coffee",
+  "donationDescrip": "此應用程式的所有功能都可供您使用，沒有付費牆。但是製作應用程式和託管網站會產生成本，請通過捐款幫助我。如果您喜歡此應用程式，請在 Play/App Store 中留下您的評論，如果可以也請您慷慨捐助。",
+  "noticeContent": "情人節快樂！希望你的一天充滿來自所有星系每個角落的愛！特別感謝 @ItzHooverYT 創建與 NMS 相關的情人節卡片！",
+  "noticeAccept": "接受",
+  "buyMeACoffee": "給我買杯咖啡",
   "patreon": "Patreon",
   "paypal": "PayPal",
   "kofi": "Ko-fi",
@@ -56,27 +56,27 @@
   "allRawMaterialsRequired": "所有需要的材料",
   "noItems": "沒有物件",
   "refinedUsing": "Refined with",
-  "refineToCreate": "Refine {0} to create",
+  "refineToCreate": "精煉 {0} 以獲得",
   "usedToCreate": "用於制作",
   "similarRefinerRecipes": "可精煉自",
   "inputs": "輸入",
   "output": "輸出",
   "help": "幫助",
   "close": "關閉",
-  "apply": "Apply",
+  "apply": "應用",
   "edit": "修改",
   "delete": "刪除",
   "deleteAll": "刪除全部",
-  "cart": "Cart",
-  "cartContent": "Tap and hold to delete an item.",
-  "noCartItems": "No Items in Cart",
+  "cart": "購物車",
+  "cartContent": "點擊並長按以刪除項目。",
+  "noCartItems": "購物車內沒有項目",
   "quantity": "數量",
   "cooking": "烹調產品",
-  "ingredients": "Ingredients",
-  "cookToCreate": "Cook {0} to Create",
-  "cookingRecipe": "Cook Using",
-  "viewXMore": "View All ({0} more)",
-  "exploits": "Exploits",
+  "ingredients": "原料",
+  "cookToCreate": "烹飪 {0} 以製作",
+  "cookingRecipe": "烹飪原料",
+  "viewXMore": "查看所有 (還有 {0} 項)",
+  "exploits": "遊戲漏洞",
   "outputs": "輸出",
   "steps": "步驟",
   "buildings": "建築零件",
@@ -92,7 +92,7 @@
   "advancedSearch": "進階搜尋",
   "searchGuide": "搜尋指引",
   "guides": "指引",
-  "minutes": "{0} minutes",
+  "minutes": "{0} 分鐘",
   "itemName": "項目名稱",
   "type": "類型",
   "group": "組別",
@@ -100,27 +100,27 @@
   "minValue": "最低價值",
   "maxValue": "最高價值",
   "upgradeModules": "升級模組",
-  "homeUseCompactTiles": "Home: Use Compact Tiles",
+  "homeUseCompactTiles": "使用緊湊標題",
   "settings": "設定",
   "appLanguage": "現在語言",
-  "guidesUseCompactTiles": "Guides: Use Compact Tiles",
+  "guidesUseCompactTiles": "指引：使用緊湊標題",
   "darkModeEnabled": "暗黑模式",
   "tradeItems": "貿易物資",
-  "tradeItem": "Trade Item",
+  "tradeItem": "交易物品",
   "clear": "清除",
   "searchOptions": "搜尋選項",
   "searchResults": "搜尋結果",
   "updateAvailable": "可用更新",
   "googlePlay": "Google Play",
-  "appStore": "App Store",
-  "blueprintCost": "Blueprint Cost",
-  "cookingValue": "Cooking Value",
-  "craftable": "Craftable",
-  "maxStackSize": "Maximum Stack",
-  "portals": "Portals",
-  "backupPortals": "Backup Portals",
-  "restorePortals": "Restore Portals",
-  "releaseNotes": "Release Notes",
+  "appStore": "應用商店",
+  "blueprintCost": "藍圖花費",
+  "cookingValue": "烹飪價值",
+  "craftable": "可製作",
+  "maxStackSize": "最高堆疊",
+  "portals": "傳送門",
+  "backupPortals": "備用傳送門",
+  "restorePortals": "恢復傳送門",
+  "releaseNotes": "版本說明",
   "allItems": "所有物品",
   "catalogue": "型錄",
   "constructedTechnologies": "建造的科技",
@@ -133,51 +133,51 @@
   "stamina": "體力",
   "duration": "持續時間： ",
   "nmsWebsite": "nomanssky.com",
-  "common": "Common",
-  "uncommon": "Uncommon",
-  "rare": "Rare",
-  "seconds": "{0} seconds",
-  "timeToMake": "Time to Make:",
+  "common": "常見",
+  "uncommon": "不常見",
+  "rare": "稀有",
+  "seconds": "{0} 秒",
+  "timeToMake": "製作所需時間",
   "discord": "Discord",
   "twitter": "Twitter",
-  "contributors": "Contributors",
-  "english": "English",
-  "afrikaans": "Afrikaans",
-  "dutch": "Dutch",
-  "french": "French",
-  "german": "German",
-  "italian": "Italian",
-  "portuguese": "Portuguese",
-  "brazilianPortuguese": "Brazilian Portuguese",
-  "polish": "Polish",
-  "russian": "Russian",
-  "spanish": "Spanish",
-  "hungarian": "Hungarian",
+  "contributors": "貢獻者",
+  "english": "英文",
+  "afrikaans": "南非荷蘭文",
+  "dutch": "荷蘭文",
+  "french": "法文",
+  "german": "德文",
+  "italian": "意大利文",
+  "portuguese": "葡萄牙文",
+  "brazilianPortuguese": "巴西葡萄牙文",
+  "polish": "波蘭文",
+  "russian": "俄文",
+  "spanish": "西班牙文",
+  "hungarian": "匈牙利文",
   "simplifiedChinese": "簡體中文",
   "traditionalChinese": "繁體中文",
-  "communityMission": "Community Mission",
-  "communityMissionContent": "The Space Anomaly is accumulating research data from Travellers across multiple realities. \r\n\r\nAs further universal data is submitted, the Quicksilver Synthesis Companion will unlock additional collectables.",
-  "patched": "Patched",
-  "general": "General",
-  "useMaterialTheme": "Use Material Theme",
-  "showItemBackgroundColours": "Show Item Background Colours",
-  "portalsNotUploaded": "Portals were not uploaded",
-  "portalsUploaded": "Portals uploaded",
-  "portalsNotRestored": "Portals were not restored",
-  "portalsRestored": "Portals restored",
+  "communityMission": "社區研究",
+  "communityMissionContent": "太空異象正在收集來自多個現實的旅行者的研究數據。隨著更多宇宙數據被上傳，水銀合成夥伴將解鎖更多收藏品。",
+  "patched": "已修復",
+  "general": "常規",
+  "useMaterialTheme": "使用主題材質",
+  "showItemBackgroundColours": "顯示物品背景顏色",
+  "portalsNotUploaded": "傳送門未被上載",
+  "portalsUploaded": "傳送門已上載",
+  "portalsNotRestored": "傳送門未被恢復",
+  "portalsRestored": "傳送門已恢復",
   "error": "錯誤",
   "success": "成功",
-  "romanian": "Romanian",
-  "whatIsNew": "What's New",
-  "newItem": "New",
-  "somethingWentWrong": "Something went wrong",
-  "researchProgress": "Research Progress",
-  "communityLinks": "Community Links",
-  "social": "Socials",
-  "shareContent": "I'm using the Assistant for No Man's Sky App! Available on Google Play, iOS App Store and web! #NoMansSky #AssistantNMS #Android #IOS",
-  "shareTitle": "Assistant for No Man's Sky App!",
+  "romanian": "羅馬尼亞文",
+  "whatIsNew": "最新消息",
+  "newItem": "新消息",
+  "somethingWentWrong": "出錯了",
+  "researchProgress": "研究進度",
+  "communityLinks": "社區鏈接",
+  "social": "社交媒體",
+  "shareContent": "我在使用 Assistant for No Man's Sky 應用程式！Google Play，iOS 應用商店和官方網頁均可下載！#NoMansSky #AssistantNMS #Android #IOS",
+  "shareTitle": "Assistant for No Man's Sky 應用程式！",
   "share": "分享",
-  "feedback": "Feedback",
+  "feedback": "反饋",
   "yes": "Yes",
   "no": "No",
   "submit": "提交",
@@ -453,5 +453,5 @@
   "suggestALink": "Suggest a Link",
   "creatureHarvestKill": "Kill",
   "creatureHarvestHarvest": "Harvest",
-  "hashCode": "69138332C9601927882D7A2185F30BF1"
+  "hashCode": "5EC750B0D9383EDE6A1F8DED04698C64"
 }
