@@ -9,7 +9,7 @@ List<LocalizationMap> supportedLanguageMaps = [
     LocalizationMap(LocaleKey.italian, 'it', 'it', percentageComplete: 100),
     LocalizationMap(LocaleKey.russian, 'ru', 'ru', percentageComplete: 100),
     LocalizationMap(LocaleKey.polish, 'pl', 'pl', percentageComplete: 98),
-    LocalizationMap(LocaleKey.brazilianPortuguese, 'pt-br', 'br', percentageComplete: 98),
+    LocalizationMap(LocaleKey.brazilianPortuguese, 'pt-br', 'br', percentageComplete: 100),
     LocalizationMap(LocaleKey.portuguese, 'pt', 'pt', percentageComplete: 24),
     LocalizationMap(LocaleKey.norwegian, 'no', 'no', percentageComplete: 80),
     LocalizationMap(LocaleKey.romanian, 'ro', 'ro', percentageComplete: 38),
@@ -18,7 +18,7 @@ List<LocalizationMap> supportedLanguageMaps = [
     LocalizationMap(LocaleKey.turkish, 'tr', 'tr', percentageComplete: 93),
     LocalizationMap(LocaleKey.hungarian, 'hu', 'hu', percentageComplete: 99),
     LocalizationMap(LocaleKey.simplifiedChinese, 'zh-hans', 'cn', percentageComplete: 100),
-    LocalizationMap(LocaleKey.traditionalChinese, 'zh-hant', 'cn', percentageComplete: 32),
+    LocalizationMap(LocaleKey.traditionalChinese, 'zh-hant', 'cn', percentageComplete: 50),
     LocalizationMap(LocaleKey.arabic, 'ar', 'ar', percentageComplete: 11),
     LocalizationMap(LocaleKey.vietnamese, 'vi-vn', 'vn', percentageComplete: 92),
     LocalizationMap(LocaleKey.urdu, 'ur', 'pk', percentageComplete: 7),
