@@ -3,6 +3,7 @@
 - Fix Refiner recipe times
 - Moved items that were in incorrect categories
 - Fixed language resetting to English when cancelling language selection
+- Update language translations
 
 _Submitted to App Stores 2022-08-12_
 
